--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,18 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
     implementation 'com.google.firebase:firebase-auth:16.2.0'
     implementation 'com.google.firebase:firebase-database:16.0.4'
     implementation 'com.google.firebase:firebase-storage:16.0.4'
+
+    implementation 'com.google.firebase:firebase-messaging:17.6.0'
+    //implementation 'com.google.firebase:firebase-core:17.0.1'
+
+
+    implementation 'com.firebaseui:firebase-ui-database:4.0.0'
 
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     testImplementation 'junit:junit:4.12'
@@ -35,5 +43,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
 apply plugin: 'com.google.gms.google-services'
