--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -34,6 +36,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:17.6.0'
     //implementation 'com.google.firebase:firebase-core:17.0.1'
 
+    implementation 'com.google.firebase:firebase-core:16.0.7'
+    implementation 'com.google.firebase:firebase-firestore:18.1.0'
+
 
     implementation 'com.firebaseui:firebase-ui-database:4.0.0'
 
@@ -44,7 +49,12 @@ dependencies {
 
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
 
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'com.android.support:multidex:1.0.3'
+
+    //classpath 'com.google.gms:google-services:3.0.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
